force-app/main/default/objects/InformaticaTaskIDs__c/InformaticaTaskIDs__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Informatica Task IDs</label>
</CustomObject>