force-app/main/default/objects/InformaticaTaskIDs__c/fields/HOU_Account__c.field-meta.xml
<CustomField>
    <fullName>HOU_Account__c</fullName>
    <label>HOU Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>