force-app/main/default/objects/InformaticaTaskIDs__c/fields/HOU_Account_UFV__c.field-meta.xml
<CustomField>
    <fullName>HOU_Account_UFV__c</fullName>
    <label>HOU Account UFV</label>
    <length>50</length>
    <type>Text</type>
</CustomField>