force-app/main/default/objects/InformaticaTaskIDs__c/fields/HOU_Bill_Group__c.field-meta.xml
<CustomField>
    <fullName>HOU_Bill_Group__c</fullName>
    <label>HOU Bill Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>