force-app/main/default/objects/InformaticaTaskIDs__c/fields/HOU_Billing_UFV__c.field-meta.xml
<CustomField>
    <fullName>HOU_Billing_UFV__c</fullName>
    <label>HOU Billing UFV</label>
    <length>50</length>
    <type>Text</type>
</CustomField>