force-app/main/default/objects/InformaticaTaskIDs__c/fields/HOU_Contract__c.field-meta.xml
<CustomField>
    <fullName>HOU_Contract__c</fullName>
    <label>HOU Contract</label>
    <length>50</length>
    <type>Text</type>
</CustomField>