force-app/main/default/objects/InformaticaTaskIDs__c/fields/HOU_Contract_Charge__c.field-meta.xml
<CustomField>
    <fullName>HOU_Contract_Charge__c</fullName>
    <label>HOU Contract Charge</label>
    <length>50</length>
    <type>Text</type>
</CustomField>