force-app/main/default/objects/InformaticaTaskIDs__c/fields/HOU_Position__c.field-meta.xml
<CustomField>
    <fullName>HOU_Position__c</fullName>
    <label>HOU Position</label>
    <length>50</length>
    <type>Text</type>
</CustomField>