force-app/main/default/objects/InformaticaTaskIDs__c/fields/HOU_Premise__c.field-meta.xml
<CustomField>
    <fullName>HOU_Premise__c</fullName>
    <label>HOU Premise</label>
    <length>50</length>
    <type>Text</type>
</CustomField>