force-app/main/default/objects/InformaticaTaskIDs__c/fields/HOU_Premise_AP_Value__c.field-meta.xml
<CustomField>
    <fullName>HOU_Premise_AP_Value__c</fullName>
    <label>HOU Premise AP Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>