force-app/main/default/objects/InformaticaTaskIDs__c/fields/HOU_Premise_Property_Value__c.field-meta.xml
<CustomField>
    <fullName>HOU_Premise_Property_Value__c</fullName>
    <label>HOU Premise Property Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>