force-app/main/default/objects/InformaticaTaskIDs__c/fields/HOU_Premise_Status__c.field-meta.xml
<CustomField>
    <fullName>HOU_Premise_Status__c</fullName>
    <label>HOU Premise Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>