force-app/main/default/objects/InformaticaTaskIDs__c/fields/HOU_Usage__c.field-meta.xml
<CustomField>
    <fullName>HOU_Usage__c</fullName>
    <label>HOU Usage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>