force-app/main/default/objects/InformaticaTaskIDs__c/fields/LIVE_Account__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Account__c</fullName>
    <label>LIVE Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>