force-app/main/default/objects/InformaticaTaskIDs__c/fields/LIVE_Account_UFV__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Account_UFV__c</fullName>
    <label>LIVE Account UFV</label>
    <length>50</length>
    <type>Text</type>
</CustomField>