force-app/main/default/objects/InformaticaTaskIDs__c/fields/LIVE_Bill_Group__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Bill_Group__c</fullName>
    <label>LIVE Bill Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>