force-app/main/default/objects/InformaticaTaskIDs__c/fields/LIVE_Billing_UFV__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Billing_UFV__c</fullName>
    <label>LIVE Billing UFV</label>
    <length>50</length>
    <type>Text</type>
</CustomField>