force-app/main/default/objects/InformaticaTaskIDs__c/fields/LIVE_Contract__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Contract__c</fullName>
    <label>LIVE Contract</label>
    <length>50</length>
    <type>Text</type>
</CustomField>