force-app/main/default/objects/InformaticaTaskIDs__c/fields/LIVE_Contract_Charge__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Contract_Charge__c</fullName>
    <label>LIVE Contract Charge</label>
    <length>50</length>
    <type>Text</type>
</CustomField>