force-app/main/default/objects/InformaticaTaskIDs__c/fields/LIVE_Contract_UFV__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Contract_UFV__c</fullName>
    <label>LIVE Contract UFV</label>
    <length>50</length>
    <type>Text</type>
</CustomField>