force-app/main/default/objects/InformaticaTaskIDs__c/fields/LIVE_Position__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Position__c</fullName>
    <label>LIVE Position</label>
    <length>50</length>
    <type>Text</type>
</CustomField>