force-app/main/default/objects/InformaticaTaskIDs__c/fields/LIVE_Premise_Property_Value__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Premise_Property_Value__c</fullName>
    <label>LIVE Premise Property Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>