force-app/main/default/objects/InformaticaTaskIDs__c/fields/LIVE_Premise_Status__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Premise_Status__c</fullName>
    <label>LIVE Premise Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>