force-app/main/default/objects/InformaticaTaskIDs__c/fields/LIVE_Premise_Termination__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Premise_Termination__c</fullName>
    <label>LIVE Premise Termination</label>
    <length>50</length>
    <type>Text</type>
</CustomField>