force-app/main/default/objects/InformaticaTaskIDs__c/fields/LIVE_Premise_UFV__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Premise_UFV__c</fullName>
    <label>LIVE Premise UFV</label>
    <length>50</length>
    <type>Text</type>
</CustomField>