force-app/main/default/objects/InformaticaTaskIDs__c/fields/LIVE_Usage__c.field-meta.xml
<CustomField>
    <fullName>LIVE_Usage__c</fullName>
    <label>LIVE Usage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>