force-app/main/default/objects/InformaticaTaskIDs__c/fields/MPLS_Account__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Account__c</fullName>
    <label>MPLS Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>