force-app/main/default/objects/InformaticaTaskIDs__c/fields/MPLS_Bill_Group__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Bill_Group__c</fullName>
    <label>MPLS Bill Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>