force-app/main/default/objects/InformaticaTaskIDs__c/fields/MPLS_Contract_UFV__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Contract_UFV__c</fullName>
    <label>MPLS Contract UFV</label>
    <length>50</length>
    <type>Text</type>
</CustomField>