force-app/main/default/objects/InformaticaTaskIDs__c/fields/MPLS_Customer_Care__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Customer_Care__c</fullName>
    <label>MPLS Customer Care</label>
    <length>50</length>
    <type>Text</type>
</CustomField>