force-app/main/default/objects/InformaticaTaskIDs__c/fields/MPLS_Entire_Process__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Entire_Process__c</fullName>
    <label>MPLS Entire Process</label>
    <length>50</length>
    <type>Text</type>
</CustomField>