force-app/main/default/objects/InformaticaTaskIDs__c/fields/MPLS_Position__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Position__c</fullName>
    <label>MPLS Position</label>
    <length>50</length>
    <type>Text</type>
</CustomField>