force-app/main/default/objects/InformaticaTaskIDs__c/fields/MPLS_Premise__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Premise__c</fullName>
    <label>MPLS Premise</label>
    <length>50</length>
    <type>Text</type>
</CustomField>