force-app/main/default/objects/InformaticaTaskIDs__c/fields/MPLS_Premise_Property_Value__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Premise_Property_Value__c</fullName>
    <label>MPLS Premise Property Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>