force-app/main/default/objects/InformaticaTaskIDs__c/fields/MPLS_Premise_Status__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Premise_Status__c</fullName>
    <label>MPLS Premise Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>