force-app/main/default/objects/InformaticaTaskIDs__c/fields/MPLS_Usage__c.field-meta.xml
<CustomField>
    <fullName>MPLS_Usage__c</fullName>
    <label>MPLS Usage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>