force-app/main/default/objects/InformaticaTaskIDs__c/fields/STL_Account__c.field-meta.xml
<CustomField>
    <fullName>STL_Account__c</fullName>
    <label>STL Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>