force-app/main/default/objects/InformaticaTaskIDs__c/fields/STL_Account_UFV__c.field-meta.xml
<CustomField>
    <fullName>STL_Account_UFV__c</fullName>
    <label>STL Account UFV</label>
    <length>50</length>
    <type>Text</type>
</CustomField>