force-app/main/default/objects/InformaticaTaskIDs__c/fields/STL_Bill_Group__c.field-meta.xml
<CustomField>
    <fullName>STL_Bill_Group__c</fullName>
    <label>STL Bill Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>