force-app/main/default/objects/InformaticaTaskIDs__c/fields/STL_Contract__c.field-meta.xml
<CustomField>
    <fullName>STL_Contract__c</fullName>
    <label>STL Contract</label>
    <length>50</length>
    <type>Text</type>
</CustomField>