force-app/main/default/objects/InformaticaTaskIDs__c/fields/STL_Contract_Premise__c.field-meta.xml
<CustomField>
    <fullName>STL_Contract_Premise__c</fullName>
    <label>STL Contract Premise</label>
    <length>50</length>
    <type>Text</type>
</CustomField>