force-app/main/default/objects/InformaticaTaskIDs__c/fields/STL_Position__c.field-meta.xml
<CustomField>
    <fullName>STL_Position__c</fullName>
    <label>STL Position</label>
    <length>50</length>
    <type>Text</type>
</CustomField>