force-app/main/default/objects/InformaticaTaskIDs__c/fields/STL_Premise_Property_Value__c.field-meta.xml
<CustomField>
    <fullName>STL_Premise_Property_Value__c</fullName>
    <label>STL Premise Property Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>