force-app/main/default/objects/InformaticaTaskIDs__c/fields/STL_Premise_Termination__c.field-meta.xml
<CustomField>
    <fullName>STL_Premise_Termination__c</fullName>
    <label>STL Premise Termination</label>
    <length>50</length>
    <type>Text</type>
</CustomField>