force-app/main/default/objects/InformaticaTaskIDs__c/fields/STL_Usage__c.field-meta.xml
<CustomField>
    <fullName>STL_Usage__c</fullName>
    <label>STL Usage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>